crates/kul-wasm/tests/snapshots/export_graph__example_01_nuclear_family.snap
---
source: crates/kul-wasm/tests/export_graph.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "persons": [
      {
        "id": "hiroshi",
        "name": "Hiroshi Tanaka",
        "gender": "male",
        "born": {
          "value": "1978-02-11",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "yuki",
        "name": "Yuki Tanaka",
        "gender": "female",
        "born": {
          "value": "1980-06-30",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "akiko",
        "name": "Akiko Tanaka",
        "gender": "female",
        "born": {
          "value": "2008-04-17",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "kenji",
        "name": "Kenji Tanaka",
        "gender": "male",
        "born": {
          "value": "2011-11-03",
          "precision": "day",
          "circa": false
        }
      }
    ],
    "marriages": [
      {
        "id": "m_hiroshi_yuki",
        "spouses": [
          "hiroshi",
          "yuki"
        ],
        "start": {
          "value": "2005-09-20",
          "precision": "day",
          "circa": false
        }
      }
    ],
    "parenthoodLinks": [
      {
        "marriageId": "m_hiroshi_yuki",
        "childId": "akiko",
        "kind": "biological"
      },
      {
        "marriageId": "m_hiroshi_yuki",
        "childId": "kenji",
        "kind": "biological"
      }
    ]
  }
}
