crates/kul-wasm/tests/snapshots/export_graph__example_01_nuclear_family_with_positions.snap
---
source: crates/kul-wasm/tests/export_graph.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "persons": [
      {
        "id": "hiroshi",
        "name": "Hiroshi Tanaka",
        "gender": "male",
        "born": {
          "value": "1978-02-11",
          "precision": "day",
          "circa": false
        },
        "span": [
          765,
          834
        ]
      },
      {
        "id": "yuki",
        "name": "Yuki Tanaka",
        "gender": "female",
        "born": {
          "value": "1980-06-30",
          "precision": "day",
          "circa": false
        },
        "span": [
          835,
          904
        ]
      },
      {
        "id": "akiko",
        "name": "Akiko Tanaka",
        "gender": "female",
        "born": {
          "value": "2008-04-17",
          "precision": "day",
          "circa": false
        },
        "span": [
          1151,
          1239
        ]
      },
      {
        "id": "kenji",
        "name": "Kenji Tanaka",
        "gender": "male",
        "born": {
          "value": "2011-11-03",
          "precision": "day",
          "circa": false
        },
        "span": [
          1241,
          1327
        ]
      }
    ],
    "marriages": [
      {
        "id": "m_hiroshi_yuki",
        "spouses": [
          "hiroshi",
          "yuki"
        ],
        "start": {
          "value": "2005-09-20",
          "precision": "day",
          "circa": false
        },
        "span": [
          906,
          960
        ]
      }
    ],
    "parenthoodLinks": [
      {
        "marriageId": "m_hiroshi_yuki",
        "childId": "akiko",
        "kind": "biological",
        "span": [
          1219,
          1239
        ]
      },
      {
        "marriageId": "m_hiroshi_yuki",
        "childId": "kenji",
        "kind": "biological",
        "span": [
          1307,
          1327
        ]
      }
    ]
  }
}
