crates/kul-wasm/tests/snapshots/export_graph__example_02_three_generations.snap
---
source: crates/kul-wasm/tests/export_graph.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "persons": [
      {
        "id": "chinua",
        "name": "Chinua Okeke",
        "family": "Okeke",
        "given": "Chinua",
        "gender": "male",
        "born": {
          "value": "1925",
          "precision": "year",
          "circa": true
        },
        "died": {
          "value": "1998-05-12",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "adaeze",
        "name": "Adaeze Okeke",
        "family": "Okeke",
        "given": "Adaeze",
        "gender": "female",
        "born": {
          "value": "1930-03",
          "precision": "month",
          "circa": false
        }
      },
      {
        "id": "emeka",
        "name": "Emeka Okeke",
        "gender": "male",
        "born": {
          "value": "1950",
          "precision": "year",
          "circa": false
        }
      },
      {
        "id": "ngozi",
        "name": "Ngozi Okeke",
        "gender": "female",
        "born": {
          "value": "1955-08-19",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "chidi",
        "name": "Chidi Okeke",
        "gender": "male",
        "born": {
          "value": "1980-11-14",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "amara",
        "name": "Amara Okeke",
        "gender": "female",
        "born": {
          "value": "1983-07",
          "precision": "month",
          "circa": false
        }
      }
    ],
    "marriages": [
      {
        "id": "m_chinua_adaeze",
        "spouses": [
          "chinua",
          "adaeze"
        ],
        "start": {
          "value": "1948-11-02",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "m_emeka_ngozi",
        "spouses": [
          "emeka",
          "ngozi"
        ],
        "start": {
          "value": "1978-12-09",
          "precision": "day",
          "circa": false
        }
      }
    ],
    "parenthoodLinks": [
      {
        "marriageId": "m_chinua_adaeze",
        "childId": "emeka",
        "kind": "biological"
      },
      {
        "marriageId": "m_emeka_ngozi",
        "childId": "chidi",
        "kind": "biological"
      },
      {
        "marriageId": "m_emeka_ngozi",
        "childId": "amara",
        "kind": "biological"
      }
    ]
  }
}
